# pathtotalk-vs-code-plugin

./: .eslintrc.json  .gitignore  .vscodeignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
docs/: mvp.md
python/: pyproject.toml  server.py  streaming_transcriber.py
src/: api-client.ts  audio-recorder.ts  constants.ts  extension.ts  server-manager.ts  setup-wizard.ts  status-bar.ts
src/commands/: gitignore-commands.ts  gitignore-first-record.ts  log-commands.ts  model-commands.ts  recording-commands.ts  server-commands.ts  storage-commands.ts  transcribe-file-command.ts  types.ts
src/lib/: date-format.ts  timestamped-channel.ts  wav-encoder.ts
src/voice-log/: gitignore-manager.ts  log-location.ts  log-store.ts  panel-html.ts  panel-script.ts  panel-styles.ts  panel.ts  project-storage.ts  storage-readme.ts  types.ts  vocabulary-store.ts
src/voice-transcripts/: panel-html.ts  panel-script.ts  panel-styles.ts  panel.ts  transcript-formatter.ts  transcript-store.ts  types.ts
tools/: release.sh
